update font-size for fix display bug on ie

--- a/public/templates/journees/css/style.css
+++ b/public/templates/journees/css/style.css
@@ -76,7 +76,7 @@ html>/**/body .title{
 }
 .light-title, x:-moz-any-link, x:default{
 	color:#FFFFFF;
-  font-size:0.9em; 
+  font-size:0.8em; 
 	font-weight:bold;
 	padding: 7px 5px 10px 5px;
 }
